+++fonction rundomNN++